--- a/_posts/2024-03-13-docker.md
+++ b/_posts/2024-03-13-docker.md
@@ -239,3 +239,13 @@ We have used [Digital Ocean](https://www.digitalocean.com/) as our cloud provide
 Caddy, the web server used in the InvenTree Docker setup, automatically configures SSL certificates using Let's Encrypt. This means that your InvenTree installation is automatically secured using HTTPS (and you don't need to worry about setting up SSL certificates).
 
 *Note: There are some caveats here, you should read the [Caddy documentation](https://caddyserver.com/docs/automatic-https)!*
+
+#### Further Reading
+
+This tutorial is a simple guide to getting InvenTree up and running in a Docker container. For more advanced usage, you should read the [InvenTree Setup Guide](https://docs.inventree.org/en/stable/start/intro/) guide, which provides a lot more detail about the InvenTree Docker setup.
+
+#### Project Sponsorship
+
+InvenTree is an open-source project, and is sponsored by a number of companies and individuals. We are grateful to the Digital Ocean team for their ongoing support of the InvenTree project!
+
+If you would like to sponsor the InvenTree project, please refer to our [contribution page](/contribute#sponsor) for more information.
