web server -> proxy server

--- a/_posts/2024-03-13-docker.md
+++ b/_posts/2024-03-13-docker.md
@@ -236,7 +236,7 @@ We have used [Digital Ocean](https://www.digitalocean.com/) as our cloud provide
 
 #### SSL Certificate
 
-Caddy, the web server used in the InvenTree Docker setup, automatically configures SSL certificates using Let's Encrypt. This means that your InvenTree installation is automatically secured using HTTPS (and you don't need to worry about setting up SSL certificates).
+Caddy, the proxy server used in the InvenTree Docker setup, automatically configures SSL certificates using Let's Encrypt. This means that your InvenTree installation is automatically secured using HTTPS (and you don't need to worry about setting up SSL certificates).
 
 *Note: There are some caveats here, you should read the [Caddy documentation](https://caddyserver.com/docs/automatic-https)!*
 
