--- a/_posts/2024-05-26-0.15.2.md
+++ b/_posts/2024-05-26-0.15.2.md
@@ -7,7 +7,7 @@ The InvenTree team has just released version 0.15.2 which includes a patch for a
 
 ## Security Patch
 
-We have fixed a critical security vulnerability in the InvenTree codebase which was identified and reported by one of our users. For more information on this security advisory, please refer to [https://github.com/inventree/InvenTree/security/advisories/GHSA-2crp-q9pc-457j](GHSA-2crp-q9pc-457j).
+We have fixed a critical security vulnerability in the InvenTree codebase which was identified and reported by one of our users. For more information on this security advisory, please refer to [GHSA-2crp-q9pc-457j](https://github.com/inventree/InvenTree/security/advisories/GHSA-2crp-q9pc-457j).
 
 ## Release Notes
 
