--- a/_posts/2024-08-25-0.16.0.md
+++ b/_posts/2024-08-25-0.16.0.md
@@ -112,7 +112,41 @@ We welcome any new contributors to the project, and we are always looking for ne
 
 ## 1.0.0 Release
 
+We continue to push hard to reach the 1.0.0 release milestone. This release will mark a significant milestone in the InvenTree project, and we are excited to see it come to fruition. Fingers crossed that the next minor release will be the last one before our 1.0.0 release!
+
+### User Interface Improvements
+
+The new React interface remains a major hurdle to overcome before the 1.0.0 release. We are working hard to migrate all frontend code to React, and would greatly appreciate any help from the community in this effort. Any assistance with frontend development, testing, or bug fixing would be greatly appreciated. Please reach out via our GitHub page if you are interested in helping out.
+
 ## Support the Project
+
+As always, there are many ways to support the InvenTree project!
+
+### Translation
+
+We are always looking for new translators to help us add new languages to InvenTree. If you are fluent in a language other than English, please consider contributing to our translation effort on [Crowdin](https://crowdin.com/project/inventree).
+
+### Code Contributions
+
+We welcome code contributions from the community. If you are interested in contributing to the InvenTree codebase, please refer to our [Contributing Guidelines]({% link contribute.md %}#code).
+
+### Report Bugs
+
+If you find a bug in InvenTree, please report it to us on our [GitHub issues page](https://github.com/inventree/inventree/issuse). Reporting bugs is critical to improving the software, and we appreciate any help in identifying and fixing issues.
+
+### Documentation
+
+Documenting a large software project is a challenging and ongoing effort. If you are able to provide assistance in improving the documentation set, please consider doing so! Documentation contributions can be made on [GitHub](https://github.com/inventree/InvenTree/tree/master/docs).
+
+### Financial Support
+
+If you or your company uses InvenTree, please consider sponsoring the project to show your support. Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!
+
+A friendly reminder that the majority of the work undertaken to keep InvenTree running is done by a very small group of core developers, who do so in their spare time (and are not sponsored by their employers to work on InvenTree). If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!
+
+- [Polar.sh](https://polar.sh/inventree)
+- [GitHub](https://github.com/sponsors/inventree)
+- [PayPal](https://paypal.me/inventree?locale.x=en_AU) 
 
 ## Deploying InvenTree
 
