--- a/_posts/2024-12-17-0.17.0.md
+++ b/_posts/2024-12-17-0.17.0.md
@@ -58,7 +58,7 @@ Refer to our [GitHub page](https://github.com/inventree/InvenTree/issues?q=%20la
 
 [PR 7878](https://github.com/inventree/InvenTree/pull/7878) fixes an issue with the Chinese language support in InvenTree.
 
-### Part Pricing Fixes
+### Part Pricing Fix
 
 [PR 8090](https://github.com/inventree/InvenTree/pull/8090) fixes a bug which prevented automatic updates of part pricing calculations from working correctly.
 
