--- a/_posts/2024-12-17-0.17.0.md
+++ b/_posts/2024-12-17-0.17.0.md
@@ -116,7 +116,7 @@ As always, we are grateful to all of our contributors who have helped to make th
 
 ## 1.0.0 Release Target
 
-This release marks our last minor release before our 1.0.0 release target. In the coming months we will be making some major changes to the InvenTree codebase to prepare for the 1.0.0 release. In particular, this will include a major overhaul of the frontend codebase - you can [read more about that here]({% link "_posts/2024-09-23-ui-roadmap.md" %}).
+This release marks our last minor release before our 1.0.0 release target. In the coming months we will be making some major changes to the InvenTree codebase to prepare for the 1.0.0 release. In particular, this will include a major overhaul of the frontend codebase - you can [read more about that here]({% link _posts/2024-09-23-ui-roadmap.md %}).
 
 Our major immediate goals for the project are to ensure that the new user interface is feature complete. This will include ensuring that all existing features are available in the new UI, and that the new UI is fully functional.
 
