Fix docs links to point to stable (not latest)

--- a/_news/2022-12-12-0.9.0.md
+++ b/_news/2022-12-12-0.9.0.md
@@ -18,4 +18,4 @@ A new version of the [python library](https://github.com/inventree/inventree-pyt
 
 ### Mobile App
 
-We've also released an updated version of the [mobile app](https://docs.inventree.org/en/latest/app/app/) - available for Android and iOS devices.
+We've also released an updated version of the [mobile app](https://docs.inventree.org/en/stable/app/app/) - available for Android and iOS devices.
