--- a/_posts/2023-02-06-0.10.0.md
+++ b/_posts/2023-02-06-0.10.0.md
@@ -11,11 +11,11 @@ As always, thanks to the efforts of our development team and larger community, t
 
 ### SSO Improvements
 
-A lot of work has gone into improving [Single Sign On (SSO)](https://docs.inventree.org/en/latest/settings/SSO/) integration. We have made some changes to make the SSO process smoother, and improved the user experience. Additionally (and importantly) the documentation has been significantly improved!
+A lot of work has gone into improving [Single Sign On (SSO)](https://docs.inventree.org/en/stable/settings/SSO/) integration. We have made some changes to make the SSO process smoother, and improved the user experience. Additionally (and importantly) the documentation has been significantly improved!
 
 ### Currency Conversion
 
-In a major improvement for currency support, conversion between different currencies is now performed "client side". This means that data tables which contain money values with different currencies can now be added together - and in a computationally efficient manner. Currency exchange rate data is now made available via [the API](https://docs.inventree.org/en/latest/api/api/) - paving the way for future feature development in this area.
+In a major improvement for currency support, conversion between different currencies is now performed "client side". This means that data tables which contain money values with different currencies can now be added together - and in a computationally efficient manner. Currency exchange rate data is now made available via [the API](https://docs.inventree.org/en/stable/api/api/) - paving the way for future feature development in this area.
 
 ### Pricing Features
 
