--- a/_news/2025-06-02-0.17.13.md
+++ b/_news/2025-06-02-0.17.13.md
@@ -6,4 +6,4 @@ title: 0.17.13 Release
 ### Security Release 0.17.13
 
 The recent 0.17.3 release includes a fix for a security vulnerability. We encourage updating at the earliest available maintenance window.
-https://github.com/inventree/InvenTree/releases/tag/0.17.13
+Release Notes: [0.17.13](https://github.com/inventree/InvenTree/releases/tag/0.17.13)
